SimpleComplex/Database 1.x, 2018-04-22
--------------------------------------
- MS SQL client info.
- The parameter marker is now a constant; not necessarily question mark.
- Splitting query by parameter marker - and checking for parameters/arguments
  count mismatch - moved to decidated method.

SimpleComplex/Database 1.x, 2018-04-21
--------------------------------------
- Check parameter types.
- Query multi-query features sorted.
- Client options resolved into separate optionsResolved property.
  And connection flags is a MariaDb/MySQL-only feature.
- Client public optionsResolve() to facilitate debugging.
- MS SQL query and result complete.

SimpleComplex/Database 1.x, 2018-04-20
--------------------------------------
- Client getConnection() shan't default to re-connect.
- Refer prepared statements arguments.
- Close prepared statement on query object destruction.
- Uniform error messages, stating database type and client name.
- Query execute.
- Forbid starting transaction when previously ditto isn't terminated yet.
- Document that MariaDB prepared statement requires the mysqlnd driver.
  Because a result set will eventually be handled as \mysqli_result
  via mysqli_stmt::get_result(); only available with mysqlnd.


SimpleComplex/Database 1.x, 2018-04-19
--------------------------------------
- Initial.